# indicator-scraper

./: .gitignore  Cargo.toml  Makefile.toml  README.md  index.html
docs/: index.html
docs/pkg/: README.md  package.d.ts  package.js  package.json  package_bg.d.ts  package_bg.wasm
docs/public/: index.css
src/: lib.rs  scraper.rs
src/model/: mod.rs
