[package]
version = "0.1.0"
name = "indicator-scraper"
repository = "https://github.com/jakubclark/indicator-scraper"
authors = ["Kuba Clark <jakub.clark@protonmail.com>"]
description = "Web App which scrapes texts for FQDNs, MD5s, IPv4s and more"
categories = ["web", "scraper", "wasm"]
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies]
seed = "0.7.0"
lazy_static = "1.4.0"
regex = "1.3.9"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
